# dione

./: .drone.yml  README.md  hosts  main.yml  media.py  nfs.py  pyproject.toml  requirements.txt  run.sh  vars.yml
roles/common/tasks/: d_gitea.yml  d_grafana.yml  d_media.yml  d_nzbget.yml  d_postgres.yml  d_prometheus.yml  d_registry.yml  d_traefik.yml  main.yml
roles/services/lidarr/tasks/: main.yml
scripts/: main.sh
