[tool.poetry]
name = "Dione"
version = "0.1.0"
description = ""
authors = ["Nicholas Romero <ncrmro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.10.3"
openshift = "^0.11.2"
psycopg2-binary = "^2.8.6"
PyYAML = "^5.3.1"
pyaml = "^20.4.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^4.3.7"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
